--- a/web_server/html/apscan.html
+++ b/web_server/html/apscan.html
@@ -8,7 +8,7 @@
 <body>
     <nav id="nav">
         <div class="main-header">
-            <img id="logo-img"><b style="color:#fff">Wi-</b>PWN
+            <div id="logo-img"></div><b style="color:#fff">Wi-</b>PWN
         </div>
         <div id="links">
             <a href="apscan.html" class="active">Scan</a>
