--- a/web_server/html/settings.html
+++ b/web_server/html/settings.html
@@ -8,7 +8,7 @@
 <body>
     <nav id="nav">
         <div class="main-header">
-            <img id="logo-img"><b style="color:#fff">Wi-</b>PWN
+            <div id="logo-img"></div><b style="color:#fff">Wi-</b>PWN
         </div>
         <div id="links">
             <a href="apscan.html">Scan</a>
@@ -50,7 +50,7 @@
                             <input type="checkbox" name="ssidHidden" id="ssidHidden" value="false">
                             <label class="checkbox" for="ssidHidden"></label>
                         </div>
-                        <div class="col-12-sm divider">
+                        <div class="col-12 divider">
                         </div>
                         <div class="col1">
                             <label for="apScanHidden">Show hidden networks</label>
