--- a/web_server/html/stations.html
+++ b/web_server/html/stations.html
@@ -27,7 +27,7 @@
         </div>
         <div class="container">
             <div class="card-container-basic">
-                <div class="settingsHeader" style="display:inline-block;margin-bottom: 30px">Scan for Wi-Fi stations <span id="clientsFound"></span></div>
+                <div class="settingsHeader" style="display:inline-block;margin-bottom: 30px">Scan for Wi-Fi users <span id="clientsFound"></span></div>
                 <button onclick="scan()" id="startScan" class="button-primary right">scan</button>
                 <div class="card-basic">
                     <div class="input-container">
@@ -37,11 +37,8 @@
                     <br>
                    <table id="stations"></table>
                 </div>
-                <div class="settingsHeader">Station handles</div>
+                <div class="settingsHeader">Saved users <span id="clientNames"></span></div>
                 <div class="card-basic">
-                    Saved clients: <span id="clientNames"></span>
-                    <br>
-                    <br>
                     <table id="nameList"></table>
                     <button class="button-warn right" onclick="clearNameList()">Reset entries</button>
                     <br class="clear" />
