--- a/web_server/html/index.html
+++ b/web_server/html/index.html
@@ -22,22 +22,21 @@
         <div id="error"></div>
         <div class="container">
             <div class="card-container-basic">
-                <div class="settingsHeader">WARNING</div>
+                <div class="settingsHeader">Terms and Conditions</div>
                 <div class="card-basic">
                     <div id="logo-img2"></div>
-                    This software is for testing common vulnerabilities in the <i>802.11 standard</i>.
-                    <br> It can disrupt unprotected Wi-Fi connections, check the laws in your country before using it.
-                    <br>
-                    <br>
-                    <span class="warn">Use it only on your own networks and devices!</span>
-                    <br> The usage of this software against other networks without permission is illegal!
-                    <br>
-                    <br> You are self responsible for everything you do with this program!
-                    <br>
-                    <br>
-                    <button class="right" onclick="document.cookie = 'accepted=yes';window.location='apscan.html'">Continue</button>
-                    <br>
-                    <br>
+                    <h1>Welcome to Wi-PWN</h1>
+                    <hr class="small"><b>This software is intended for use with trained professionals!</b>
+                    <br>It can perform deauth attack on unprotected <i>802.11</i> Wi-Fi networks, <i>which could be perceived as using an illegal 'Wi-Fi Jammer'.</i>
+                    <p>Only use this software on networks you have sole permission to use it on.</p>
+                    <p>
+                    <b>By clicking <a>Accept</a> you agree to the terms and conditions</b>
+                    </p>
+                    <div class="row">
+                    <div class="col-12">
+                    <button class="right" onclick="document.cookie = 'accepted=yes';window.location='apscan.html'">Accept</button>
+                    </div>
+                    </div>
                 </div>
             </div>
         </div>
