--- a/web_server/html/info.html
+++ b/web_server/html/info.html
@@ -22,37 +22,49 @@
         <div id="error"></div>
         <div class="container">
             <div class="card-container-basic">
-                <div class="settingsHeader">Wi-PWN</div>
+                <div class="settingsHeader">About Wi-PWN</div>
                 <div class="card-basic">
-                    <div style="margin-left: 20px">
-                        WiPWN is an <i>open-source</i> firmware for <b>ESP8266 boards</b>, based on the esp8266_deauther project created by:
-                        <div class="profile">
-                            <h1 class="avatar-header"><b>Stefan Kremser - Spacehuhn</b></h1>
-                            <br> &nbsp; ESP8266 Deauther project creator and programmer
-                        </div>
-                        The logo, web interface and was later designed by WiPWN 
-                        <div class="profile">
-                            <h1 class="avatar-header"><b>Sam Denty</b></h1>
-                            <br> &nbsp; Web interface and icons
-                        </div>
-                    </div>
+                    WiPWN is an <i>open-source</i> firmware for <b>ESP8266 boards</b>, that can allow the board to perform deauth attacks.
+                    <br>
+                    <br>
+                    <b>Project manager and web designer:</b> Samuel Denty
+                    <h3><a href="https://github.com/samdenty99">@samdenty99</a></h3>
                 </div>
             </div>
             <div class="card-container-basic">
-                <div class="settingsHeader">Included libraries</div>
+                <div class="settingsHeader">Spacehuhn ESP8266 Deauther</div>
                 <div class="card-basic">
-                    This project is licensed under the MIT License - see the <a href="license">license file</a> file for details.
-                    <br>The source code is available on <a href="https://github.com/spacehuhn/esp8266_deauther" target="_blank">GitHub</a>.
-                    <br>Use it only for testing or educational purposes on your own devices!
+                    Wi-PWN was originally based on <a href="https://github.com/spacehuhn/esp8266_deauther">spacehuhn/esp8266_deauther</a>
+                    <p>
+                        <b>All credits go to Stefan Kremser!</b>
+                    </p>
+                    <b><a href="https://github.com/spacehuhn">@spacehuhn</a></b>
+                </div>
+            </div>
+            <div class="card-container-basic">
+                <div class="settingsHeader">Legal</div>
+                <div class="card-basic">
+                    This project is licensed under the <a href="https://opensource.org/licenses/MIT">MIT License</a>.
+                    <p>
+                        <b>Any redistributing, advertising or selling of the <i>ESP8266 module</i> as a "jammer" without clearly stating it as a pentesting device for testing purposes only, is prohibited! Only use this device on networks that you own, or have explicit permission to use it on.</b></p>
+                </div>
+            </div>
+            <div class="card-container-basic">
+                <hr>
+                <div class="settingsHeader">3rd Party</div>
+                <div class="card-basic">
+                    <div class="row">
+                        <div class="col-4">Wireshark manufacturer database</div>
+                        <div class="col-8"><a href="https://www.wireshark.org/tools/oui-lookup.html">https://www.wireshark.org/tools/oui-lookup</a></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">Roboto fonts</div>
+                        <div class="col-8"><a href="https://fonts.google.com/specimen/Roboto">https://fonts.google.com/specimen/Roboto</a></div>
+                    </div>
                     <br>
-                    <br>
-                    <b>Any redistributing, advertising or selling of the <i>ESP8266 module</i> as a "jammer" without clearly stating it as a pentesting device for testing purposes only, is prohibited! &nbsp; Only use this device on networks that you own, or have explicit permission to use it on. </b>
-                    <br>
-                    <br> The MAC address list is based on Wireshark manufacturer database. - <a href="https://www.wireshark.org/tools/oui-lookup.html">https://www.wireshark.org/tools/oui-lookup.html</a>
-                    
                 </div>
             </div>
         </div>
         <footer></footer>
-        <script src="js/functions.js"></script> 
+        <script src="js/functions.js"></script>
 </body>
