Changed names of pages

--- a/web_server/html/scan.html
+++ b/web_server/html/scan.html
@@ -11,8 +11,8 @@
             <div id="logo-img"></div><b style="color:#fff">Wi-</b>PWN
         </div>
         <div id="links">
-            <a href="apscan.html" class="active">Scan</a>
-            <a href="stations.html">Stations</a>
+            <a href="scan.html" class="active">Scan</a>
+            <a href="users.html">Users</a>
             <a href="attack.html">Attack</a>
             <a href="settings.html">Settings</a>
             <a class="right" href="info.html">Info</a>
@@ -49,5 +49,5 @@
         <footer></footer>
     </div>
     <script src="js/functions.js"></script>
-    <script src="js/apscan.js"></script>
+    <script src="js/scan.js"></script>
 </body>
