--- a/web_server/html/attack.html
+++ b/web_server/html/attack.html
@@ -11,8 +11,8 @@
             <div id="logo-img"></div><b style="color:#fff">Wi-</b>PWN
         </div>
         <div id="links">
-            <a href="apscan.html">Scan</a>
-            <a href="stations.html">Stations</a>
+            <a href="scan.html">Scan</a>
+            <a href="users.html">Users</a>
             <a href="attack.html" class="active">Attack</a>
             <a href="settings.html">Settings</a>
             <a class="right" href="info.html">Info</a>
@@ -28,7 +28,7 @@
                     <ul id="selectedAPs">
                     </ul>
                     <br>
-                    <b>Selected stations:</b>
+                    <b>Selected users:</b>
                     <ul id="selectedClients">
                     </ul>
                     <br>
@@ -64,7 +64,7 @@
                     <br>
                     <br>
                     <b>Deauth attack</i>:</b>
-                    <br>Sends deauthentication and dissociation frames to the selected station(s) and access point(s).
+                    <br>Sends deauthentication and dissociation frames to the selected users(s) and access point(s).
                     <br>
                     <br>
                     <b>Beacon flood:</b>
