--- a/web_server/html/error.html
+++ b/web_server/html/error.html
@@ -11,8 +11,8 @@
             <div id="logo-img"></div><b style="color:#fff">Wi-</b>PWN
         </div>
         <div id="links">
-            <a href="apscan.html">Scan</a>
-            <a href="stations.html">Stations</a>
+            <a href="scan.html">Scan</a>
+            <a href="users.html">Users</a>
             <a href="attack.html">Attack</a>
             <a href="settings.html">Settings</a>
             <a class="right" href="info.html">Info</a>
