--- a/web_server/html/index.html
+++ b/web_server/html/index.html
@@ -11,8 +11,8 @@
             <div id="logo-img"></div><b style="color:#fff">Wi-</b>PWN
         </div>
         <div id="links">
-            <a href="apscan.html">Scan</a>
-            <a href="stations.html">Stations</a>
+            <a href="scan.html">Scan</a>
+            <a href="users.html">Users</a>
             <a href="attack.html">Attack</a>
             <a href="settings.html">Settings</a>
             <a class="right" href="info.html">Info</a>
@@ -34,7 +34,7 @@
                     </p>
                     <div class="row">
                     <div class="col-12">
-                    <button class="right" onclick="document.cookie = 'accepted=yes';window.location='apscan.html'">Accept</button>
+                    <button class="right" onclick="document.cookie = 'accepted=yes';window.location='scan.html'">Accept</button>
                     </div>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
        document.getElementById("logo-img2").innerHTML=svgLogo; 
         var cookie = document.cookie;
         if (cookie.indexOf('accepted=yes') >= 0) {
-            window.location = 'apscan.html'
+            window.location = 'scan.html'
         }
         </script>
     </div>
