--- a/web_server/html/settings.html
+++ b/web_server/html/settings.html
@@ -11,8 +11,8 @@
             <div id="logo-img"></div><b style="color:#fff">Wi-</b>PWN
         </div>
         <div id="links">
-            <a href="apscan.html">Scan</a>
-            <a href="stations.html">Stations</a>
+            <a href="scan.html">Scan</a>
+            <a href="users.html">Users</a>
             <a href="attack.html">Attack</a>
             <a href="settings.html" class="active">Settings</a>
             <a class="right" href="info.html">Info</a>
@@ -70,7 +70,7 @@
                         <div class="col-12">
                             <div class="input-container">
                                 <input placeholder=" " id="scanTime" type="number" required="" min="1" max="255">
-                                <label for="scanTime">Default station scan time (seconds)</label>
+                                <label for="scanTime">Default device scan time (seconds)</label>
                             </div>
                         </div>
                     </div>
