--- a/web_server/html/users.html
+++ b/web_server/html/users.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Stations - Wi-PWN</title>
+    <title>Users - Wi-PWN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="main.css">
     <meta name="theme-color" content="#1976d2">
@@ -11,8 +11,8 @@
             <div id="logo-img"></div><b style="color:#fff">Wi-</b>PWN
         </div>
         <div id="links">
-            <a href="apscan.html">Scan</a>
-            <a href="stations.html" class="active">Stations</a>
+            <a href="scan.html">Scan</a>
+            <a href="users.html" class="active">Users</a>
             <a href="attack.html">Attack</a>
             <a href="settings.html">Settings</a>
             <a class="right" href="info.html">Info</a>
@@ -35,7 +35,7 @@
                         <label for="scanTime">Scan time (seconds)</label>
                     </div>
                     <br>
-                    <table id="stations"></table>
+                    <table id="users"></table>
                 </div>
                 <div class="settingsHeader">Saved users <span id="clientNames"></span></div>
                 <div class="card-basic">
@@ -61,6 +61,6 @@
         </div>
         <footer></footer>
         <script src="js/functions.js"></script>
-        <script src="js/stations.js"></script>
+        <script src="js/users.js"></script>
     </div>
 </body>
