--- a/web_server/html/settings.html
+++ b/web_server/html/settings.html
@@ -21,7 +21,7 @@
     </nav>
     <div class="main-wrap">
         <div class="container settings">
-            <div class="card-container">
+    <script>/(^|;)\s*minimal=/.test(document.cookie)&&(document.body.id="minimal");</script>
                 <div class="settingsHeader">Wi-Fi configuration</div>
                 <div class="card">
                     <div class="row">
@@ -56,14 +56,13 @@
                             <label class="checkbox" for="apScanHidden"></label>
                         </div>
                         <div class="col-12">
-                            <label for="multiAPs">Scan multiple SSID</label>
+                            <label for="multiAPs">Attack multiple networks</label>
                             <input type="checkbox" name="multiAPs" id="multiAPs" value="false">
                             <label class="checkbox" for="multiAPs"></label>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="card-container">
                 <div class="settingsHeader">Advanced</div>
                 <div class="card">
                     <div class="row">
