--- a/web_server/html/index.html
+++ b/web_server/html/index.html
@@ -19,6 +19,7 @@
         </div>
         <div id="error"></div>
     </nav>
+    <script>/(^|;)\s*minimal=/.test(document.cookie)&&(document.body.id="minimal");</script>
     <div class="main-wrap">
         <div class="container">
             <div class="card-container-basic">
