--- a/web_server/html/settings.html
+++ b/web_server/html/settings.html
@@ -19,9 +19,10 @@
         </div>
         <div id="error"></div>
     </nav>
+    <script>/(^|;)\s*minimal=/.test(document.cookie)&&(document.body.id="minimal");</script>
     <div class="main-wrap">
         <div class="container settings">
-    <script>/(^|;)\s*minimal=/.test(document.cookie)&&(document.body.id="minimal");</script>
+            <div class="card-container-basic settings">
                 <div class="settingsHeader">Wi-Fi configuration</div>
                 <div class="card">
                     <div class="row">
@@ -63,6 +64,7 @@
                     </div>
                 </div>
             </div>
+            <div class="card-container-basic settings">
                 <div class="settingsHeader">Advanced</div>
                 <div class="card">
                     <div class="row">
