--- a/web_server/html/info.html
+++ b/web_server/html/info.html
@@ -31,28 +31,35 @@
                     <br> The source code is available on <a href="https://github.com/spacehuhn/esp8266_deauther" target="_blank">GitHub</a>.
                     <br>
                     <br> Use it only for testing or educational purposes on your own devices!
-                    <br><br>
-                    <b>
-                        Referring to this project as "jammer" is prohibited! Name the project by its correct name.<br>
-                        </b>
+                    <br>
+                    <br>
+                    <b>Referring to this project as "jammer" is prohibited! Name the project by its correct name.</b>
+                    <br>
+                    <br>
+                    <br>
+                    <b style="font-size: 1.1em"><a href="https://github.com/spacehuhn" target="_blank">@spacehuhn</a> (Stefan Kremser)<br>
+                    <a href="https://github.com/spacehuhn" target="_blank">@samdenty99</a> (Sam Denty)</b>
+                    <br>
                 </div>
             </div>
             <div class="card-container-basic">
                 <div class="settingsHeader">Contributors</div>
                 <div class="card-basic">
-                        <a href="https://github.com/andrbmgi" target="_blank">@andrbmgi</a>
-                        <br>
-                        <a href="https://github.com/N0vaPixel" target="_blank">@N0vaPixel</a> (Aur&eacute;lien Hernandez)
-                        <br>
-                        <a href="https://github.com/tobozo" target="_blank">@tobozo</a>
-                        <br>
-                        <a href="https://github.com/SaltyViper" target="_blank">@SaltyViper</a>
-                        <br>
-                        <a href="https://github.com/ajnavarro" target="_blank">@ajnavarro</a> (Antonio Navarro Perez)
-                        <br>
-                        <a href="https://github.com/schinfo" target="_blank">@schinfo</a> (Helmut)
-                        <br>
-                        <a href="https://github.com/SamuelKlit" target="_blank">@SamuelKlit</a> (Samuel KS)
+                    <a href="https://github.com/andrbmgi" target="_blank">@andrbmgi</a>
+                    <br>
+                    <a href="https://github.com/N0vaPixel" target="_blank">@N0vaPixel</a> (Aur&eacute;lien Hernandez)
+                    <br>
+                    <a href="https://github.com/tobozo" target="_blank">@tobozo</a>
+                    <br>
+                    <a href="https://github.com/SaltyViper" target="_blank">@SaltyViper</a>
+                    <br>
+                    <a href="https://github.com/ajnavarro" target="_blank">@ajnavarro</a> (Antonio Navarro Perez)
+                    <br>
+                    <a href="https://github.com/schinfo" target="_blank">@schinfo</a> (Helmut)
+                    <br>
+                    <a href="https://github.com/SamuelKlit" target="_blank">@SamuelKlit</a> (Samuel KS)
+                    <br><br><div class="divider"></div><br>
+                    For more information go to <a href="https://github.com/spacehuhn/esp8266_deauther/graphs/contributors">contributors</a> on the GitHub page.
                 </div>
             </div>
             <div class="card-container-basic">
