--- a/web_server/html/info.html
+++ b/web_server/html/info.html
@@ -65,7 +65,7 @@
             <div class="card-container-basic">
                 <hr>
                 <div class="settingsHeader">Included libraries</div>
-                <div class="card-basic">
+                <div class="card-basic oh">
                     <div class="row">
                         <div class="col-4">Wireshark manufacturer database</div>
                         <div class="col-8"><a href="https://www.wireshark.org/tools/oui-lookup.html">https://www.wireshark.org/tools/oui-lookup</a></div>
