--- a/web_server/html/settings.html
+++ b/web_server/html/settings.html
@@ -125,13 +125,18 @@
                         <div class="col-12">
                             <div class="input-container">
                                 <input placeholder=" " id="macInterval" type="number" required="" min="0" max="65000">
-                                <label for="packetRate">MAC Change Interval (beacons &amp; probes)</label>
+                                <label for="packetRate">MAC Change Interval</label>
                             </div>
                         </div>
                         <div class="col-12">
                             <label for="ssidEnc">WPA2 Beacons</label>
                             <input type="checkbox" name="ssidEnc" id="ssidEnc" value="false">
                             <label class="checkbox" for="ssidEnc"></label>
+                        </div>
+                        <div class="col-12">
+                            <label for="beaconInterval">1s Beacon interval</label>
+                            <input type="checkbox" name="beaconInterval" id="beaconInterval" value="false">
+                            <label class="checkbox" for="beaconInterval"></label>
                         </div>
                     </div>
                 </div>
