--- a/web_server/html/scan.html
+++ b/web_server/html/scan.html
@@ -31,13 +31,13 @@
         </div>
         <div class="container">
             <div class="card-container-basic">
-                <div class="settingsHeader" style="display:inline-block;margin-bottom: 30px">Scan for Wi-Fi networks
+                <div class="settingsHeader button-header" style="display:inline-block;margin-bottom: 30px">Scan for Wi-Fi networks
                     <div class="network-info">
                         <div id="networksFound"></div>
                         <div id="apMAC"></div>
                     </div>
                 </div>
-                <button onclick="scan()" id="apScanStart" class="right button-primary">Scan</button>
+                <button onclick="scan()" id="apScanStart" class="right button-primary button-header">Scan</button>
                 <table id="apscan"><tr><th><input type="checkbox" name="selectAll" id="selectAll" class="dn"></th></tr></table>
                 <div class="row">
                         <button onclick="window.location = 'attack.html'" class="right">Attack</button>
