--- a/web_server/html/users.html
+++ b/web_server/html/users.html
@@ -30,13 +30,13 @@
         </div>
         <div class="container">
             <div class="card-container-basic">
-                <div class="settingsHeader" style="display:inline-block;margin-bottom: 30px">Scan for Wi-Fi users <span id="clientsFound"></span></div>
-                <button onclick="scan()" id="startScan" class="button-primary right">Scan</button>
+                <div class="settingsHeader button-header-2" style="display:inline-block;margin-bottom: 30px">Scan for Wi-Fi users <span id="clientsFound"></span></div>
+                <button onclick="scan()" id="startScan" class="button-primary right button-header-2">Scan</button>
                 <table id="users"><tr><th>&nbsp;</th></tr></table>
                 <hr>
                 <div id="saved-users" class="dn">
-                    <div class="settingsHeader" style="display:inline-block;margin-bottom: 30px">Saved users <span id="clientNames"></span></div>
-                    <button class="button-warn right" onclick="clearNameList()">Reset</button>
+                    <div class="settingsHeader button-header" style="display:inline-block;margin-bottom: 30px">Saved users <span id="clientNames"></span></div>
+                    <button class="button-warn button-header right" onclick="clearNameList()">Reset</button>
                     <table id="nameList"></table>
                 </div>
                 <div class="card-basic" style="padding:35px 40px">
