Added dark mode

--- a/web_server/html/info.html
+++ b/web_server/html/info.html
@@ -2,6 +2,7 @@
     <title>Info - Wi-PWN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="dark.css">
     <meta name="theme-color" content="#1976d2">
 </head>
 
@@ -71,10 +72,13 @@
                         <div class="col-8"><a href="https://www.wireshark.org/tools/oui-lookup.html">https://www.wireshark.org/tools/oui-lookup</a></div>
                     </div>
                     <div class="row">
-                        <div class="col-4">Roboto fonts</div>
-                        <div class="col-8"><a href="https://fonts.google.com/specimen/Roboto">https://fonts.google.com/specimen/Roboto</a></div>
+                        <div class="col-4">Waves.js</div>
+                        <div class="col-8"><a href="https://github.com/fians/Waves">https://github.com/fians/Waves</a></div>
                     </div>
-                    <br>
+                    <div class="row">
+                        <div class="col-4">Material design icons</div>
+                        <div class="col-8"><a href="https://materialdesignicons.com">https://materialdesignicons.com</a></div>
+                    </div>
                 </div>
             </div>
         </div>
