--- a/web_server/html/scan.html
+++ b/web_server/html/scan.html
@@ -2,6 +2,7 @@
     <title>Scan - Wi-PWN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="dark.css">
     <meta name="theme-color" content="#1976d2">
 </head>
 
