--- a/web_server/html/scan.html
+++ b/web_server/html/scan.html
@@ -25,11 +25,7 @@
     /(^|;)\s*minimal=/.test(document.cookie) && (document.body.id = "minimal")
     </script>
     <div class="main-wrap">
-        <div id="spinner-container">
-            <svg class="spinner" viewBox="0 0 66 66">
-                <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
-            </svg>
-        </div>
+        <div id="spinner-container"></div>
         <div class="container">
             <div class="card-container-basic">
                 <div class="settingsHeader button-header" style="display:inline-block;margin-bottom: 30px">Scan for Wi-Fi networks
