--- a/web_server/html/attack.html
+++ b/web_server/html/attack.html
@@ -24,6 +24,7 @@
     /(^|;)\s*minimal=/.test(document.cookie) && (document.body.id = "minimal");
     </script>
     <div class="main-wrap">
+        <div id="spinner-container"></div>
         <div class="container">
             <div class="card-container-basic">
                 <div class="settingsHeader">Initiate Attack</div>
