--- a/web_server/html/index.html
+++ b/web_server/html/index.html
@@ -22,6 +22,7 @@
     </nav>
     <script>/(^|;)\s*minimal=/.test(document.cookie)&&(document.body.id="minimal");</script>
     <div class="main-wrap">
+        <div id="spinner-container"></div>
         <div class="container">
             <div class="card-container-basic">
                 <div class="settingsHeader">Terms and Conditions</div>
